@@ -1,0 +1,4 @@
+version=3
+
+opts=dversionmangle=s/-dfsg\d*$//,uversionmangle=s/-.*// \
+ http://virtualbox.org/wiki/Downloads .*/VirtualBox-([\d\.\-]+)_OSE.tar.bz2
